--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "@standardnotes/authenticator",
-  "version": "2.2.5",
+  "version": "2.3.9",
   "main": "dist/dist.js",
   "author": "Standard Notes",
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
-    "components:compile": "webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "start": "webpack serve --config webpack.dev.js --progress --hot",
     "skip:lint": "eslint app/ --ext .js",
     "lint:fix": "eslint app/ --ext .js --fix",
@@ -23,6 +25,10 @@
       "prettier --write"
     ]
   },
+  "dependencies": {
+    "@standardnotes/editor-kit": "standardnotes/editor-kit#50ffb15c935a297b082eb00ffd031adc05080d7f",
+    "@standardnotes/styles": "1.6.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.5",
     "@babel/eslint-parser": "^7.18.2",
@@ -30,9 +36,7 @@
     "@babel/plugin-transform-runtime": "^7.18.5",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
-    "@standardnotes/editor-kit": "2.2.5",
     "@standardnotes/eslint-config-extensions": "^1.0.4",
-    "@standardnotes/styles": "workspace:*",
     "@svgr/webpack": "^6.2.1",
     "babel-loader": "^8.2.5",
     "css-loader": "*",
